# Multi-Factor-Equity-Screener

./: README.md  pyproject.toml  requirements.txt
docs/: original_research_script_sanitized.py
src/equity_factor_model/: __init__.py  cli.py  model.py
tests/: test_import.py
